converting csv to json

--- a/package.json
+++ b/package.json
@@ -8,28 +8,34 @@
     "start": "nodemon server.js",
     "seed": "node seeds/seed.js"
   },
-  "keywords": ["Keyworkd1", "Keyword2", "Keyword3"],
+  "keywords": [
+    "Keyworkd1",
+    "Keyword2",
+    "Keyword3"
+  ],
   "author": "Your Name",
-  "contributors": [{
-    "name": "Contributor Name",
-    "email": "contributor.email@email.com",
-    "url": "https://github.com/contributorUsername"
-  },
-  {
-    "name": "Contributor2 Name",
-    "email": "contibutor2.email@email.com",
-    "url": "https://github.com/contributor2Username"
-  },
-  {
-    "name": "Contributor3 Name",
-    "email": "contibutor3.email@email.com",
-    "url": "https://github.com/contributor3Username"
-  }
-    ],
+  "contributors": [
+    {
+      "name": "Contributor Name",
+      "email": "contributor.email@email.com",
+      "url": "https://github.com/contributorUsername"
+    },
+    {
+      "name": "Contributor2 Name",
+      "email": "contibutor2.email@email.com",
+      "url": "https://github.com/contributor2Username"
+    },
+    {
+      "name": "Contributor3 Name",
+      "email": "contibutor3.email@email.com",
+      "url": "https://github.com/contributor3Username"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.4",
+    "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
