--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "intro.js": "^8.0.0-beta.1",
     "pg": "^8.11.3",
     "sequelize": "^6.3.5"
   },
